--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mongoose": "^5.10.9"
+    "md5": "^2.3.0",
+    "mongoose": "^5.10.9",
+    "sha1": "^1.1.1"
   }
 }
